samples/_failures_safe/1761655104_42178f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b03131f.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_9b03131f.c:181:5: error: expected declaration or statement at end of input
  181 |     }
      |     ^
